fix #4952 Prevent numerous authors from pushing title out of view

--- a/src/static/common/css/common.css
+++ b/src/static/common/css/common.css
@@ -328,6 +328,14 @@ a.twitter-x{
   line-height: 1.25;
 }
 
+/* Hotfix for creating a scrollbar when
+ * there are numerous authors, due to limited
+ * display space on OLH and clean themes */
+:not(.show-for-small-only) .article-authors-br {
+  overflow-y: scroll;
+  max-height: 6rem;
+}
+
 .comma-separated > *:not(:last-child):after {
   content: ", ";
 }
